--- a/my-project/package.json
+++ b/my-project/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "framer-motion": "^12.23.26",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
+    "react-typed": "^2.0.12",
+    "swiper": "^12.0.3",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
