--- a/my-project/package.json
+++ b/my-project/package.json
@@ -11,11 +11,16 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "dom": "^0.0.3",
     "framer-motion": "^12.23.26",
-    "react": "^19.2.0",
+    "react": "^19.2.3",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.12.0",
+    "react-slick": "^0.31.0",
     "react-typed": "^2.0.12",
+    "router": "^2.2.0",
+    "slick-carousel": "^1.8.1",
     "swiper": "^12.0.3",
     "tailwindcss": "^4.1.18"
   },
