--- a/my-project/package.json
+++ b/my-project/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "dom": "^0.0.3",
     "framer-motion": "^12.23.26",
+    "lucide-react": "^0.563.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
